# regex-iterator-example-flash-cards

./: .gitignore  CMakeLists.txt
include/: question.h
pools/: encoded_general.txt  encoded_tech.txt  general.txt  small_test_file.txt  tech.txt
src/: main.cpp  question.cpp
test/: identifier_matching.cpp  mapped_file_iterator.cpp
